--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "ts-node-dev --transpilyOnly --ignore-watch node_modules src/server.ts"
+    "dev:server": "ts-node-dev --transpilyOnly --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.1.3",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "uuid": "^8.3.2"
   },
   "dependencies": {
     "@types/express": "^4.17.11",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typeorm": "^0.2.31"
   }
 }
