--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "ts-node-dev --transpilyOnly --ignore-watch node_modules src/server.ts",
+    "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
   },
   "devDependencies": {
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "express": "^4.17.1",
+    "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31"
   }
 }
