--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "license": "MIT",
   "scripts": {
     "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "test": "set NODE_ENV=test jest"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/uuid": "^8.3.0",
+    "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^26.5.2",
     "ts-node-dev": "^1.1.3",
     "typescript": "^4.2.2",
     "uuid": "^8.3.2"
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/supertest": "^2.0.10",
     "express": "^4.17.1",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.1.3",
     "typeorm": "^0.2.31"
   }
 }
