--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "set NODE_ENV=test jest"
+    "test": "set NODE_ENV=test jest",
+    "postest": "rm ./src/database/database.test.sqlite"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
