--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@types/express": "^4.17.11",
+    "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "express": "^4.17.1",
+    "nodemailer": "^6.5.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
     "typeorm": "^0.2.31"
