--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "nodemailer": "^6.5.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
