--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.5.0",
     "sqlite3": "^5.0.2",
     "supertest": "^6.1.3",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "yup": "^0.32.9"
   }
 }
