app nodejs completed

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev:server": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "set NODE_ENV=test jest",
-    "postest": "rm ./src/database/database.test.sqlite"
+    "test": "set NODE_ENV=test jest -i"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
